[package]
name = "glog_v2_character_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"

# Optional dependencies for different builds
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
web = ["axum", "tokio", "tower", "tower-http", "serde_json"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"
required-features = ["web"]
